--- a/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/invoice-single/style.scoped.scss
@@ -251,7 +251,7 @@
   margin-top: 15px;
 }
 .ncpi .pi-add-term .pi-group-item {
-  padding: 15px 10px;
+  padding: 5px 10px 10px;
   border-radius: 6px;
   margin-top: 10px;
   border: 1px solid var(--border-color-gray);
@@ -265,7 +265,7 @@
   margin: 0;
   padding-left: 20px;
   list-style-type: lower-alpha;
-  margin-bottom: 15px;
+  margin-bottom: 7px;
 }
 .ncpi .pi-add-term .pi-group-item ul li {
   width: 90%;
