--- a/src/admin/js/react/components/payment/style.scoped.scss
+++ b/src/admin/js/react/components/payment/style.scoped.scss
@@ -133,8 +133,7 @@
   margin-right: 5px;
   fill: var(--text-color-white);
 }
-.ncpi .pi-form-content.pi-form-style-two .pi-btn {
-  width: 100%;
+.ncpi #pi-stripe .pi-form-content.pi-form-style-two .pi-btn {
   background: #e1e8ff;
   margin-top: 30px;
   border-radius: 5px;
